[package]
name = "parachutedrop-rust-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# https://github.com/seanmonstar/reqwest/issues/773
reqwest = { version = "0.11.13", features = ["json", "native-tls-alpn"] }
tonic = "0.8.3"
prost = "0.11.5"
#pbjson = "0.5.1"
#pbjson-types = "0.5.1"
json = "*"

tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "full"] }
protobuf = "3.2.0" # This will be needed to use the generated code as protobuf messages
cosmos-sdk-proto = "0.16.0" # This will be needed to use the generated code as protobuf messages
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", branch = "main" }
web3 = "0.18.0"
jsonrpc-core-client = "18.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"
base64 = "0.21.0"
ecdsa = "0.15.1"
ed25519 = "2.1.0"

[build-dependencies]
tonic-build = "0.8.4"
#prost-build = "0.11.5"
#pbjson-build = "0.5.1"

[dev-dependencies]
protobuf-codegen-pure = "2.14" # Might be different by the time you read this

