[package]
name = "parachutedrop-rust-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
# when ssl connection is not available, use this https://github.com/actix/actix-web/issues/1045#issuecomment-1143440535
awc = { version = "3.0.0", features = ["openssl"] }
openssl = "0.10.40"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.17"

# https://github.com/seanmonstar/reqwest/issues/773
reqwest = { version = "0.11.13", features = ["json", "native-tls-alpn", "multipart"] }
tonic = "0.8.3"
prost = "0.11.5"
json = "*"

tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "full"] }
protobuf = "3.2.0" # This will be needed to use the generated code as protobuf messages
cosmos-sdk-proto = "0.16.0" # This will be needed to use the generated code as protobuf messages
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", branch = "main" }
strum = "0.24.1"
strum_macros = "0.24.3"
base64 = "0.21.0"
ecdsa = "0.13.4"
ed25519 = "2.1.0"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
rand_chacha = "0.3.1"
rand = "0.7.3"
ed25519-dalek = "1.0.1"
ring = "0.16.20"
hex = "0.4.3"
ethers = "0.13.0"
actix-multipart = "0.5.0"
gluesql = "0.13.1"
actix-cors = "0.6.4"

[build-dependencies]
tonic-build = "0.8.4"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.x25519-dalek]
version = "1.2.0"

[dependencies.zeroize]
version = "=1.3"

[dev-dependencies]
protobuf-codegen-pure = "2.14" # Might be different by the time you read this

